--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body {
 		<a class="sp-circle-link" href="#">by Pradnya</a>
 	</div>
 </div>
-<img src="img/123.jpg"><img src="img/123.jpg"><img src="img/123.jpg">
+<img src="123.jpg">
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 <script src='https://cdn.rawgit.com/davatron5000/Lettering.js/5a4897f9/jquery.lettering.js'></script>
 
